bugfix for form method get with action with query string

--- a/tests/data/method_get.html
+++ b/tests/data/method_get.html
@@ -1,2 +1,2 @@
 <form action="" method="get" id="frm-">
-<input type="hidden" name="do" value="-submit"></form>
+<input type="hidden" name="a" value="3"><input type="hidden" name="b" value="aw"><input type="hidden" name="do" value="-submit"></form>
