--- a/tests/data/bootstrap_group_row_rendering.html
+++ b/tests/data/bootstrap_group_row_rendering.html
@@ -1,4 +1,4 @@
-<form action="" method="post" id="frm-"><input type="hidden" name="_do" value="-submit"><fieldset><legend>Group 1</legend><div class="form-row"><div class="col-sm-6">
+<form action="" method="post" id="frm-"><input type="hidden" name="_do" value="-submit"><fieldset><legend>Group 1</legend><div class="class1 form-row"><div class="col-sm-6">
 <div class="form-group row">
 	<label class="col-sm-3 col-form-label" for="frm--category">Category</label>
 
